// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageInput /> renders correctly 1`] = `
<div
  className="MuiInput-root-46 MessageInput-root-44 MuiInput-fullWidth-53 MuiInput-multiline-52"
  onKeyPress={[Function]}
>
  <div
    className="Textarea-root-59"
    style={
      Object {
        "height": 19,
      }
    }
  >
    <textarea
      aria-hidden="true"
      className="Textarea-shadow-61 Textarea-textarea-60"
      readOnly={true}
      rows="1"
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-hidden="true"
      className="Textarea-shadow-61 Textarea-textarea-60"
      defaultValue={undefined}
      readOnly={true}
      rows={1}
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-invalid={undefined}
      aria-required={undefined}
      autoComplete={undefined}
      autoFocus={undefined}
      className="Textarea-textarea-60 MuiInput-input-54 MuiInput-inputMultiline-56"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder="Type your message…"
      readOnly={undefined}
      required={undefined}
      rows={1}
      type="text"
      value=""
    />
  </div>
  <div
    className="MuiInputAdornment-root-62 MessageInput-sendIcon-45 MuiInputAdornment-positionEnd-64"
  >
    <button
      aria-label="Send message"
      className="MuiButtonBase-root-71 MuiIconButton-root-65"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-70"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-74"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-80"
      />
    </button>
  </div>
</div>
`;

exports[`<MessageInput /> renders correctly disabled 1`] = `
<div
  className="MuiInput-root-46 MessageInput-root-44 MuiInput-disabled-49 MuiInput-fullWidth-53 MuiInput-multiline-52"
  onKeyPress={[Function]}
>
  <div
    className="Textarea-root-59"
    style={
      Object {
        "height": 19,
      }
    }
  >
    <textarea
      aria-hidden="true"
      className="Textarea-shadow-61 Textarea-textarea-60"
      readOnly={true}
      rows="1"
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-hidden="true"
      className="Textarea-shadow-61 Textarea-textarea-60"
      defaultValue={undefined}
      readOnly={true}
      rows={1}
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-invalid={undefined}
      aria-required={undefined}
      autoComplete={undefined}
      autoFocus={undefined}
      className="Textarea-textarea-60 MuiInput-input-54 MuiInput-disabled-49 MuiInput-inputMultiline-56"
      defaultValue={undefined}
      disabled={true}
      id={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder="Type your message…"
      readOnly={undefined}
      required={undefined}
      rows={1}
      type="text"
      value=""
    />
  </div>
  <div
    className="MuiInputAdornment-root-62 MessageInput-sendIcon-45 MuiInputAdornment-positionEnd-64"
  >
    <button
      aria-label="Send message"
      className="MuiButtonBase-root-71 MuiIconButton-root-65"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-70"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-74"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-80"
      />
    </button>
  </div>
</div>
`;
